--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,11 +1,2 @@
-server: 
-  port: 3356
-spring:
-  application:
-    name: cloud-config-client1 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7005.com:7005/eureka
+config:
+  info: "master branch config-dev.yml version=1"
